force-app/main/default/objects/OrgWideSettings__c/OrgWideSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Ability to set the org on and off an alternative basic plan</description>
    <label>Org Wide Settings</label>
</CustomObject>