force-app/main/default/objects/OrgWideSettings__c/fields/ActivateAlternateBasicPlan__c.field-meta.xml
<CustomField>
    <fullName>ActivateAlternateBasicPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Alternate Basic Plan</label>
    <type>Checkbox</type>
</CustomField>