force-app/main/default/objects/OrgWideSettings__c/fields/DHAddress__c.field-meta.xml
<CustomField>
    <fullName>DHAddress__c</fullName>
    <label>DH Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>