force-app/main/default/objects/OrgWideSettings__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <type>TextArea</type>
</CustomField>