force-app/main/default/objects/OrgWideSettings__c/fields/Rawmateriallastupdatedon__c.field-meta.xml
<CustomField>
    <fullName>Rawmateriallastupdatedon__c</fullName>
    <label>Raw material last updated on</label>
    <type>Date</type>
</CustomField>