force-app/main/default/objects/OrgWideSettings__c/fields/SAGAddress__c.field-meta.xml
<CustomField>
    <fullName>SAGAddress__c</fullName>
    <label>SAG Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>